Edited every thing just need to push in the content

--- a/index.html
+++ b/index.html
@@ -59,13 +59,14 @@
       <section class="home-section home-full-height bg-dark bg-gradient" id="home" data-background="">
         <div class="titan-caption">
           <div class="caption-content">
-            <div class="font-alt mb-30 titan-title-size-1">Hello &amp; welcome</div>
-            <div class="font-alt mb-40 titan-title-size-4">We are Tech nerds</div><a class="section-scroll btn btn-border-w btn-round" href="#services">Learn More</a>
+              <div class="font-alt mb-30 titan-title-size-1">Grow your awesome idea</div>
+              <div class="font-alt mb-40 titan-title-size-3">We Make <span class="rotate">websites | mobile apps | Management systems</span>
+           <br><a class="section-scroll btn btn-border-w btn-round" href="#services">Learn More</a>
           </div>
         </div>
       </section>
       <div class="main">
-        <section class="module" id="services">
+        <section class="module pt-20" id="services">
           <div class="container">
             <div class="row">
               <div class="col-sm-6 col-sm-offset-3">
