--- a/index.html
+++ b/index.html
@@ -70,68 +70,73 @@
           <div class="container">
             <div class="row">
               <div class="col-sm-6 col-sm-offset-3">
-                <h2 class="module-title font-alt">Our Services</h2>
-                <div class="module-subtitle font-serif">A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</div>
+                <h2 class="module-title font-alt">What services are we providing?</h2>
+                <div class="module-subtitle font-serif">
+                    NerdWareTech is hiring accomplished students and internees for internship to create a successful software platform. Following services are provided at our site :
+                </div>
               </div>
             </div>
             <div class="row multi-columns-row">
               <div class="col-md-3 col-sm-6 col-xs-12">
                 <div class="features-item">
-                  <div class="features-icon"><span class="icon-lightbulb"></span></div>
-                  <h3 class="features-title font-alt">Ideas and concepts</h3>
-                  <p>Careful attention to detail and clean, well structured code ensures a smooth user experience for all your visitors.</p>
+                  <div class="features-icon"><span class="fa fa-code"></span></div>
+                  <h3 class="features-title font-alt">Web Development</h3>
+                  <p>
+                      For the web development, you will perform from all the basic to complex skills as web designing is a very broad term. It can range from developing a simple static single page to a complex designing of different applications. 
+                  </p>
                 </div>
               </div>
               <div class="col-md-3 col-sm-6 col-xs-12">
                 <div class="features-item">
-                  <div class="features-icon"><span class="icon-bike"></span></div>
-                  <h3 class="features-title font-alt">Optimised for speed</h3>
-                  <p>Careful attention to detail and clean, well structured code ensures a smooth user experience for all your visitors.</p>
+                  <div class="features-icon"><span class="fa fa-android"></span></div>
+                  <h3 class="features-title font-alt">Android/iOS Development</h3>
+                  <p>
+                      We give you an opportunity to become an ace android or iOS developer by programming in Java while using the Android SDK or by creating apps by using Xcode IDE with the iOS SDK. 
+                  </p>
                 </div>
               </div>
               <div class="col-md-3 col-sm-6 col-xs-12">
                 <div class="features-item">
-                  <div class="features-icon"><span class="icon-tools"></span></div>
-                  <h3 class="features-title font-alt">Designs &amp; interfaces</h3>
-                  <p>Careful attention to detail and clean, well structured code ensures a smooth user experience for all your visitors.</p>
+                  <div class="features-icon"><span class="fa fa-pencil-square-o"></span></div>
+                  <h3 class="features-title font-alt">Graphics Designing</h3>
+                  <p>
+                      A graphic designer is the one who creates unique designs and logos for different companies’ or media by assembling different photographs. You can be the perfect graphic designer by joining the NerdWareTech. 
+                  </p>
                 </div>
               </div>
               <div class="col-md-3 col-sm-6 col-xs-12">
                 <div class="features-item">
-                  <div class="features-icon"><span class="icon-gears"></span></div>
-                  <h3 class="features-title font-alt">Highly customizable</h3>
-                  <p>Careful attention to detail and clean, well structured code ensures a smooth user experience for all your visitors.</p>
+                  <div class="features-icon"><span class="fa fa-graduation-cap"></span></div>
+                  <h3 class="features-title font-alt">Semester projects/ FYP’s</h3>
+                  <p>
+                    NerdWareTech gives you a chance to do your final year semester project with our team. This is an excellent opportunity for the students to do their research and project work with our recognized team. 
+                  </p>
                 </div>
               </div>
-              <div class="col-md-3 col-sm-6 col-xs-12">
-                <div class="features-item">
-                  <div class="features-icon"><span class="icon-tools-2"></span></div>
-                  <h3 class="features-title font-alt">Coding &amp; development</h3>
-                  <p>Careful attention to detail and clean, well structured code ensures a smooth user experience for all your visitors.</p>
-                </div>
-              </div>
-              <div class="col-md-3 col-sm-6 col-xs-12">
-                <div class="features-item">
-                  <div class="features-icon"><span class="icon-genius"></span></div>
-                  <h3 class="features-title font-alt">Features &amp; plugins</h3>
-                  <p>Careful attention to detail and clean, well structured code ensures a smooth user experience for all your visitors.</p>
-                </div>
-              </div>
-              <div class="col-md-3 col-sm-6 col-xs-12">
-                <div class="features-item">
-                  <div class="features-icon"><span class="icon-mobile"></span></div>
-                  <h3 class="features-title font-alt">Responsive design</h3>
-                  <p>Careful attention to detail and clean, well structured code ensures a smooth user experience for all your visitors.</p>
-                </div>
-              </div>
-              <div class="col-md-3 col-sm-6 col-xs-12">
-                <div class="features-item">
-                  <div class="features-icon"><span class="icon-lifesaver"></span></div>
-                  <h3 class="features-title font-alt">Dedicated support</h3>
-                  <p>Careful attention to detail and clean, well structured code ensures a smooth user experience for all your visitors.</p>
-                </div>
-              </div>
+              
+              
             </div>
+            <div class="row multi-columns-row">
+                <div class="col-md-3 col-sm-6 col-xs-12">
+                  <div class="features-item">
+                    <div class="features-icon"><span class="fa fa-desktop"></span></div>
+                    <h3 class="features-title font-alt">Desktop Applications</h3>
+                    <p>
+                        For the web development, you will perform from all the basic to complex skills as web designing is a very broad term. It can range from developing a simple static single page to a complex designing of different applications. 
+                    </p>
+                  </div>
+                </div>
+                <div class="col-md-3 col-sm-6 col-xs-12">
+                  <div class="features-item">
+                    <div class="features-icon"><span class="fa fa-folder-open"></span></div>
+                    <h3 class="features-title font-alt">Management Systems</h3>
+                    <p>
+                        We give you an opportunity to become an ace android or iOS developer by programming in Java while using the Android SDK or by creating apps by using Xcode IDE with the iOS SDK. 
+                    </p>
+                  </div>
+                </div>
+
+              </div>
           </div>
         </section>
 
@@ -223,30 +228,30 @@
             <div class="row multi-columns-row">
               <div class="col-sm-6 col-md-3 col-lg-3">
                 <div class="count-item mb-sm-40">
-                  <div class="count-icon"><span class="icon-phone"></span></div>
-                  <h3 class="count-to font-alt" data-countto="6543"></h3>
-                  <h5 class="count-title font-serif">Dollars raised for charity</h5>
+                  <div class="count-icon"><span class="fa fa-mobile-phone"></span></div>
+                  <h3 class="count-to font-alt" data-countto="20"></h3>
+                  <h5 class="count-title font-serif">Mobile Apps Projects</h5>
                 </div>
               </div>
               <div class="col-sm-6 col-md-3 col-lg-3">
                 <div class="count-item mb-sm-40">
-                  <div class="count-icon"><span class="icon-wine"></span></div>
+                  <div class="count-icon"><span class="fa fa-desktop"></span></div>
                   <h3 class="count-to font-alt" data-countto="8"></h3>
-                  <h5 class="count-title font-serif">Cups of wine consumed</h5>
+                  <h5 class="count-title font-serif">Desktop Applications</h5>
                 </div>
               </div>
               <div class="col-sm-6 col-md-3 col-lg-3">
                 <div class="count-item mb-sm-40">
-                  <div class="count-icon"><span class="icon-camera"></span></div>
-                  <h3 class="count-to font-alt" data-countto="184"></h3>
-                  <h5 class="count-title font-serif">Photographs taken</h5>
+                  <div class="count-icon"><span class="fa fa-pencil-square-o"></span></div>
+                  <h3 class="count-to font-alt" data-countto="18"></h3>
+                  <h5 class="count-title font-serif">Graphic Designing Projects</h5>
                 </div>
               </div>
               <div class="col-sm-6 col-md-3 col-lg-3">
                 <div class="count-item mb-sm-40">
-                  <div class="count-icon"><span class="icon-map-pin"></span></div>
-                  <h3 class="count-to font-alt" data-countto="32"></h3>
-                  <h5 class="count-title font-serif">Locations covered</h5>
+                  <div class="count-icon"><span class="fa fa-folder-open"></span></div>
+                  <h3 class="count-to font-alt" data-countto="8"></h3>
+                  <h5 class="count-title font-serif">Management Systems</h5>
                 </div>
               </div>
             </div>
@@ -264,15 +269,15 @@
                   </div>
                   <div class="row">
                     <div class="col-sm-8 col-sm-offset-2">
-                      <blockquote class="testimonial-text font-alt">I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine.</blockquote>
+                      <blockquote class="testimonial-text font-alt">One of our applicant named Sania Shahzad experiences her fruitful days working as a skillful android developer with NerdWareTech team. </blockquote>
                     </div>
                   </div>
                   <div class="row">
                     <div class="col-sm-4 col-sm-offset-4">
                       <div class="testimonial-author">
                         <div class="testimonial-caption font-alt">
-                          <div class="testimonial-title">Jack Woods</div>
-                          <div class="testimonial-descr">SomeCompany INC, CEO</div>
+                          <div class="testimonial-title">Sania Shahzad</div>
+                          <div class="testimonial-descr"></div>
                         </div>
                       </div>
                     </div>
@@ -288,39 +293,15 @@
                   </div>
                   <div class="row">
                     <div class="col-sm-8 col-sm-offset-2">
-                      <blockquote class="testimonial-text font-alt">I should be incapable of drawing a single stroke at the present moment; and yet I feel that I never was a greater artist than now.</blockquote>
+                      <blockquote class="testimonial-text font-alt">Ali Abbas, one of the best internees as well as an ace graphic designer designed many logs and t-shirt deigns with our team. </blockquote>
                     </div>
                   </div>
                   <div class="row">
                     <div class="col-sm-4 col-sm-offset-4">
                       <div class="testimonial-author">
                         <div class="testimonial-caption font-alt">
-                          <div class="testimonial-title">Jim Stone</div>
-                          <div class="testimonial-descr">SomeCompany INC, CEO</div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="container">
-                  <div class="row">
-                    <div class="col-sm-12">
-                      <div class="module-icon"><span class="icon-quote"></span></div>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col-sm-8 col-sm-offset-2">
-                      <blockquote class="testimonial-text font-alt">I am so happy, my dear friend, so absorbed in the exquisite sense of mere tranquil existence, that I neglect my talents.</blockquote>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col-sm-4 col-sm-offset-4">
-                      <div class="testimonial-author">
-                        <div class="testimonial-caption font-alt">
-                          <div class="testimonial-title">Adele Snow</div>
-                          <div class="testimonial-descr">SomeCompany INC, CEO</div>
+                          <div class="testimonial-title">Ali Abbas</div>
+                          <div class="testimonial-descr">Internee(Graphic Designer)</div>
                         </div>
                       </div>
                     </div>
